--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-saver": "^2.0.5",
     "i": "^0.3.7",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
     "ngx-cookie-service": "^15.0.0",
     "npm": "^9.6.6",
     "primeflex": "^3.3.0",
