--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.9",
     "@angular/cdk": "^16.0.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
@@ -21,11 +21,15 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.4",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "jquery": "^3.6.4",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "ngx-cookie-service": "^15.0.0",
     "npm": "^9.6.6",
