--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^14.2.5-lts",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
