--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-toastr": "^17.0.2",
     "npm": "^9.6.6",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
